typescript/checker/tests/conformance/decorators/class/property/decoratorOnClassProperty7.ts.stderr
error: Unexpected token Some(At)
 --> $DIR/tests/conformance/decorators/class/property/decoratorOnClassProperty7.ts:6:5
  |
6 |     @dec prop;
  |     ^

